--- a/app/views/skm/entry_headers/_data_grid.html.erb
+++ b/app/views/skm/entry_headers/_data_grid.html.erb
@@ -5,7 +5,10 @@
           <tbody>
             <tr>
               <td class="pbTitle">
-                <%= text_field_tag("full_search", t(:tip_skm_entry_header_full_search), {:style => "height:25px;width:300px;", :class => "grayTips"}) %>
+                <%= render :partial => "irm/common/full_text_search_input",
+                           :locals => {:tip_text => t(:tip_skm_entry_header_full_search),
+                                       :target_table => "entry_headers_list",
+                                       :id => "full_search"} %>
               </td>
               <td id="topButtonRow" class="pbButton">
 
@@ -44,26 +47,3 @@
       </div>
     </div>
 </div>
-
-<script type="text/javascript">
-function inputTipText(){
-    $("input[class*=grayTips]") //所有样式名中含有grayTips的input
-    .each(function(){
-       var oldVal=$(this).val();   //默认的提示性文本
-       $(this)
-       .css({"color":"#888"})  //灰色
-       .focus(function(){
-        if($(this).val()!=oldVal){$(this).css({"color":"#000"})}else{$(this).val("").css({"color":"#888"})}
-       })
-       .blur(function(){
-        if($(this).val()==""){$(this).val(oldVal).css({"color":"#888"})}
-       })
-       .keydown(function(){$(this).css({"color":"#000"})})
-
-    })
-}
-
-$(function(){
-    inputTipText();  //直接调用就OK了
-})
-</script>
