--- a/public/themes/default/stylesheets/container.css
+++ b/public/themes/default/stylesheets/container.css
@@ -519,5 +519,5 @@ body .wizard-block .pbBody .pbSubheader h3, body .wizard-block .bPageBlock .pbBo
 }
 
 /****************************************************/
-table.split-table{width:100%}
-table.split-table tr td:first-child {width: 250px;}
+table.split-table{width:100%;}
+table.split-table tr td:first-child {width: 200px;}
