--- a/app/views/skm/entry_headers/my_favorites.html.erb
+++ b/app/views/skm/entry_headers/my_favorites.html.erb
@@ -1,11 +1,4 @@
 <%= common_title(:model_meaning=>t(:label_skm)) %>
-<div class="toolbar">
-    <span class="toggleButtons">
-      <%= link_to(toggle_img("listViewIcon"),{:controller => "skm/entry_headers",:action=>"index"},{:alt=>t(:label_skm_entry_header),:title=>t(:label_skm_entry_header)}) %>
-      <%= link_to(toggle_img("singleUserViewIcon",true),{:controller => "skm/entry_headers",:action=>"my_favorites"},{:href=>"javascript:void(0)",:alt=>t(:label_skm_entry_header_my_favorites),:title=>t(:label_skm_entry_header_my_favorites)}) %>
-      <%= link_to(toggle_img("multiUserViewIcon"),{:controller => "skm/file_managements",:action=>"index"},{:alt=>t(:label_skm_file_management),:title=>t(:label_skm_file_management)}) %>
-    </span>
-</div>
 <div class="listRelatedObject setupBlock">
     <div class="page-block">
       <div class="pbHeader">
@@ -14,6 +7,10 @@
             <tr>
               <td class="pbTitle"><h2 class="mainTitle"><%= t(:label_skm_entry_header_my_favorites_list) %></h2></td>
               <td id="topButtonRow" class="pbButton">
+                  <div class="button-group">
+                    <div class="button"><%= link_to(t(:label_skm_entry_header_index), {:action => "index"})%></div>
+                    <div class="button selected"><%= link_to(t(:label_action_my_favorites), {}, {:href => "javascript:void(0);"})%></div>
+                  </div>
               </td>
               <td class="pbHelp">
               </td>
@@ -22,24 +19,40 @@
         </table>
       </div>
       <div class="pbBody">
-        <div id="favorites_list" class="datatable" style="width:100%">
-          <div id="id" style="display:none">
-            <%= link_to(t(:show),{:controller => "skm/entry_headers", :action=>"show",:id=>"{id}"}) %>&nbsp;
-            <%= link_to(t(:remove_from_favorite), {:controller => "skm/entry_headers", :action=>"remove_favorite",:person_id=>Irm::Person.current.id, :entry_header_id => "{id}"},:confirm => t(:label_are_you_sure)) %>
-          </div>
-          <div id="entry_title" style="display:none">
-            <%= link_to("{entry_title}",{:controller => "skm/entry_headers", :action=>"show",:id=>"{id}"}) %>
-          </div>
-          <div id="doc_number" style="display:none">
-            <%= link_to("{doc_number}",{:controller => "skm/entry_headers", :action=>"show",:id=>"{id}"}) %>
-          </div>
-        </div>
-        <%= datatable("favorites_list",{:action=>"my_favorites_data",:format=>"json", :person_id => Irm::Person.current.id},
-                  [{:key=>"id",:label=>t(:operation),:formatter=>"Y.irm.template",:width=>"120px"},
-                   {:key=>"doc_number",:label=>t(:label_skm_entry_header_doc_number),:formatter=>"Y.irm.template", :width => "120px"},
-                   {:key=>"entry_title",:label=>t(:label_skm_entry_header_title),:formatter=>"Y.irm.template"},
-                   {:key=>"published_date_f",:label=>t(:label_skm_entry_header_published_date), :width => "180px"}
-                   ],{:html=>true})%>
+        <table class="split-table">
+          <tr>
+            <td>
+              <%= render :partial =>"/irm/common/tree_sidebar", :locals =>{:tree_url => url_for(:controller => "skm/columns", :action=>"get_columns_data", :access => "current", :format=>:json),
+                                                             :target_table => "favorites_list",
+                                                             :tree_id => "tree-div",
+                                                             :title => t(:label_skm_column),
+                                                             :root_text => t(:label_skm_column_all),
+                                                             :url_param_value => 'id',
+                                                             :url_param_name => 'column_id'} %>
+            </td>
+            <td>
+                <div id="favorites_list" class="datatable" style="width:100%">
+                  <div id="id" style="display:none">
+                    <%= link_to(t(:remove_from_favorite), {:controller => "skm/entry_headers", :action=>"remove_favorite",:person_id=>Irm::Person.current.id, :entry_header_id => "{id}"},:confirm => t(:label_are_you_sure)) %>
+                  </div>
+                  <div id="entry_title" style="display:none">
+                    <%= link_to("{entry_title}",{:controller => "skm/entry_headers", :action=>"show",:id=>"{id}"}) %>
+                  </div>
+                  <div id="doc_number" style="display:none">
+                    <%= link_to("{doc_number}",{:controller => "skm/entry_headers", :action=>"show",:id=>"{id}"}) %>
+                  </div>
+                </div>
+                <%= datatable("favorites_list",{:action=>"my_favorites_data",:column_id => @column_id,:format=>"json", :person_id => Irm::Person.current.id},
+                          [{:key=>"id",:label=>t(:operation),:formatter=>"Y.irm.template",:width=>"60px"},
+                           {:key=>"published_date_f",:label=>t(:label_skm_entry_header_published_date), :width => "130px"},
+                           {:key=>"entry_title",:label=>t(:label_skm_entry_header_title),:formatter=>"Y.irm.template"},
+                           {:key=>"doc_number",:label=>t(:label_skm_entry_header_doc_number),:formatter=>"Y.irm.template", :width => "100px"},
+                           ],{:html=>true, :paginator_box=>"favorites_list_paginator_box"})%>
+                <div id="favorites_list_paginator_box"></div>
+            </td>
+          </tr>
+        </table>
+
       </div>
     </div>
 </div>
