--- a/app/views/irm/common/_full_text_search_input.html.erb
+++ b/app/views/irm/common/_full_text_search_input.html.erb
@@ -5,10 +5,12 @@
     <div class="button" style="margin-top:0;"><%= link_to t(:search), {}, {:href =>"javascript:void(0);",:onclick => "getSearch()"} %></div>
 </div>
 <script type="text/javascript">
+var g_oldVal = "";
 function inputTipText(){
     $("input[class*=grayTips]") //所有样式名中含有grayTips的input
     .each(function(){
        var oldVal=$(this).val();   //默认的提示性文本
+       g_oldVal = oldVal;
        $(this)
        .css({"color":"#888"})  //灰色
        .focus(function(){
@@ -31,8 +33,12 @@ $(function(){
 });
 
 function getSearch(){
-    var params = {};
-    params["full_search"] = $("#<%= id%>").val();
-    Ext.getCmp("<%= target_table%>Datatable").store.dtStaticParams(params);
+    var text = $("#<%= id%>").val();
+    if(text != g_oldVal)
+    {
+        var params = {};
+        params["full_search"] = text;
+        Ext.getCmp("<%= target_table%>Datatable").store.dtStaticParams(params);
+    }
 }
 </script>
