--- a/app/views/skm/channels/edit.html.erb
+++ b/app/views/skm/channels/edit.html.erb
@@ -28,7 +28,7 @@
           <span class="requiredText"> = <%=t(:label_is_required)%></span>
         </span>
       </span>
-      <h3><%= t(:label_common_info) %></h3>
+      <h3><%= t(:label_skm_channel_column) %></h3>
     </div>
     <div class="pbSubsection">
       <table class="detailList" cellpadding="0" cellspacing="0" border="0">
