--- a/app/views/skm/channels/show.html.erb
+++ b/app/views/skm/channels/show.html.erb
@@ -42,7 +42,7 @@
   </div>
   <div class="pbBody">
         <div class="pbSubheader tertiaryPalette">
-          <h3><%= t(:label_common_info) %></h3>
+          <h3><%= t(:label_skm_channel_column) %></h3>
         </div>
         <div class="pbSubsection">
           <table class="detailList" cellpadding="0" cellspacing="0" border="0">
