--- a/app/views/skm/entry_templates/show.html.erb
+++ b/app/views/skm/entry_templates/show.html.erb
@@ -80,8 +80,8 @@
                       [{:key=>"id",:label=>t(:operation),:formatter=>"Y.irm.template", :width => "100px"},
                        {:key=>"detail_id",:formatter=>"Y.irm.template", :hidden => true},
                        {:key=>"detail_required_flag",:label=>t(:label_skm_entry_template_element_required),:formatter=>"Y.irm.template", :width => "40px"},
-                       {:key=>"entry_template_element_code",:label=>t(:label_skm_entry_template_element_code), :width => "15%"},
-                       {:key=>"name",:label=>t(:name), :width => "20%"},
+                       {:key=>"entry_template_element_code",:label=>t(:label_skm_entry_template_element_code), :width => "200px"},
+                       {:key=>"name",:label=>t(:name), :width => "130px"},
                        {:key=>"description",:label=>t(:description)},
                        {:key=>"detail_rows",:label=>t(:label_skm_entry_template_element_rows), :width => "80px"}
                        ]) %>
