fixed: 补充加入 display-x的 css

--- a/public/themes/default/stylesheets/public.css
+++ b/public/themes/default/stylesheets/public.css
@@ -88,3 +88,9 @@ body .detail-block.page-block .pbBody .pbSubheader{background-color:transparent;
 div.button a {
     -moz-box-sizing: content-box!important;
 }
+
+
+.display-Y{display:inline}
+.display-N{display:none}
+.un-display-Y{display:none}
+.un-display-N{display:inline}
