--- a/app/views/icm/incident_categories/_edit_form.html.erb
+++ b/app/views/icm/incident_categories/_edit_form.html.erb
@@ -32,7 +32,12 @@
                   <td class="labelCol"><label for="description"><%=t(:label_icm_incident_category_description)%></label></td>
                   <td class="dataCol" colspan="3" width="82%"><%=f.text_area :description, :cols=>60,:rows=>5,:id=>"report_description"%></td>
                 </tr>
-
+                <tr>
+                  <td class="labelCol"><label><%=(t :active)%></label></td>
+                  <td class="dataCol"><%=f.select :status_code, available_active_status%></td>
+                  <td class="labelCol empty">&nbsp;</td>
+                  <td class="dataCol empty">&nbsp;</td>
+                </tr>
               </tbody>
             </table>
           <% end %>
