--- a/app/views/icm/incident_categories/_edit_form.html.erb
+++ b/app/views/icm/incident_categories/_edit_form.html.erb
@@ -21,12 +21,7 @@
                   <td class="labelCol empty">&nbsp;</td>
                   <td class="dataCol empty">&nbsp;</td>
                 </tr>
-                <tr>
-                  <td class="labelCol"><label for="external_system"><%=t(:label_icm_incident_category_external_system)%></label></td>
-                  <td class="dataCol"><%=f.blank_select :external_system_id,ava_external_systems ,{},{:id=>"external_system",:required=>true}%></td>
-                  <td class="labelCol empty">&nbsp;</td>
-                  <td class="dataCol empty">&nbsp;</td>
-                </tr>
+
 
                 <tr>
                   <td class="labelCol"><label for="description"><%=t(:label_icm_incident_category_description)%></label></td>
@@ -37,6 +32,26 @@
                   <td class="dataCol"><%=f.select :status_code, available_active_status%></td>
                   <td class="labelCol empty">&nbsp;</td>
                   <td class="dataCol empty">&nbsp;</td>
+                </tr>
+              </tbody>
+            </table>
+          <% end %>
+          <%= sub_page_block(t(:label_icm_incident_category_external_system)) do  %>
+            <table class="detailList" cellpadding="0" cellspacing="0" border="0">
+              <tbody>
+                <tr>
+                  <td class="labelCol empty">&nbsp;</td>
+                  <td class="dataCol empty">&nbsp;</td>
+                  <td class="labelCol empty">&nbsp;</td>
+                  <td class="dataCol empty">&nbsp;</td>
+                </tr>
+                <tr>
+                   <td class="labelCol">
+
+                   </td>
+                   <td class="dataCol" colspan="3">
+                     <%= render :partial => "irm/duel_select/tmpl",:locals => {:f=>f,:sources=>external_system_duel_values,:str_value_field=>:system_str,:str_value=>@incident_category.get_system_str} %>
+                   </td>
                 </tr>
               </tbody>
             </table>
