修改事故单相关的报表,将报表中的服务替换为事故单分类

--- a/app/views/irm/reports/index.html.erb
+++ b/app/views/irm/reports/index.html.erb
@@ -92,7 +92,7 @@
                     </div>
                     <div id="id" class="id" style="display:none">
                       if('{editable_flag}' == 'true'){
-                         '<%=link_to(t(:edit),{:action=>"edit",:id=>"{id}"}) %> | <%=link_to(t(:delete),{:action=>"destroy",:id=>"{id}"},:confirm => t(:label_are_you_sure) ,:method => :delete) %> '
+                         ' <%=link_to(t(:delete),{:action=>"destroy",:id=>"{id}"},:confirm => t(:label_are_you_sure) ,:method => :delete) %> '
                       }
                       else{
                         ''
@@ -100,7 +100,7 @@
                     </div>
                   </div>
                   <%= datatable("report_list",{:action=>"get_data", :folder_id => @folder_id,:format=>"json"},
-                            [{:key=>"id",:label=>t(:operation),:formatter=>"Y.irm.stemplate", :width => "90px"},
+                            [{:key=>"id",:label=>t(:operation),:formatter=>"Y.irm.stemplate", :width => "40px"},
                              {:key=>"name",:label=>t(:label_irm_report_name),:formatter=>"Y.irm.stemplate", :sortable=>true,:searchable=>true,:width=>"250px"},
                              @folder_id.present? ? nil:{:key=>"report_folder_name",:label=>t(:label_irm_report_folder), :width => "150px"} ,
                              {:key=>"report_type_name",:hidden=>true,:label=>t(:label_irm_report_type), :width => "150px"},
